feat(taborder): advanced tab order logic, visual overlay, diagnostics, performance optimizations for v1.2.0

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -40,6 +40,7 @@
       >
     </div>
     <button id="diagnosticsBtn">View Diagnostics</button>
+  <button id="tabOrderBtn" style="background: #1976d2; color: white; border: none; padding: 8px 12px; border-radius: 4px; margin-left: 4px;">Show Tab Order</button>
     <button
       id="exportCsvBtn"
       style="
